        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=24122
        <rdar://problem/6674179>
        REGRESSION: DOM Range extractContents/deleteContents failures seen on Moxiecode tests

        Test: fast/dom/Range/deleted-range-endpoints.html

        * dom/Range.cpp: (WebCore::Range::processContents): Set the final range in accordance
        to the specification.



Canonical link: https://commits.webkit.org/33912@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41855 268f45cc-cd09-0410-ab3c-d52691b4dbfc